* analyse modele global (lexicon englais lexicons français) dashboard version 4 session graphe et liste dashboard reprocess

--- a/web/templates/resultatfinal.html
+++ b/web/templates/resultatfinal.html
@@ -363,7 +363,7 @@
                                                        checked> subjectif
                                             </label>
                                             <label class="btn btn-outline-primary btn-sm">
-                                                <input type="radio" name="optradio{{n}}" value="true"
+                                                <input type="radio" name="optradio{{n}}" value="false"
                                                        autocomplete="off"> objectif
                                             </label>
                                             {% else %}
@@ -372,7 +372,7 @@
                                                 > subjectif
                                             </label>
                                             <label class="btn btn-outline-primary btn-sm">
-                                                <input type="radio" name="optradio{{n}}" value="true"
+                                                <input type="radio" name="optradio{{n}}" value="false"
                                                        autocomplete="off" checked> objectif
                                             </label>
                                             {% endif %}
@@ -392,7 +392,7 @@
                 </div>
                 <div class="card">
                     <div class="card-header" id="headingThree">
-                        <h5 class="mb-0 ">
+                        <h5 class="mb-0">
                             <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree"
                                     aria-expanded="false" aria-controls="collapseThree">
                                 resultat final
