* analyse modele global (lexicon englais lexicons français) dashboard version 4 session graphe et liste dashboard reprocess polarite et visualisation

--- a/web/templates/resultatfinal.html
+++ b/web/templates/resultatfinal.html
@@ -169,7 +169,7 @@
                                     </span>
                             </button>
                             <button onclick="reprocess_correction()"
-                                    class="btn btn-primary btn-sm float-right btn-icon-split">
+                                    class="btn btn-outline-primary btn-sm float-right btn-icon-split">
                                 <div>
                                     <span class="text">retraitement</span>
                                 </div>
@@ -327,7 +327,7 @@
                                       </span>
                             </button>
                             <button onclick="reprocess_subjectivity()"
-                                    class="btn btn-primary btn-sm float-right btn-icon-split">
+                                    class="btn btn-outline-primary btn-sm float-right btn-icon-split">
                                 <div>
                                     <span class="text">retraitement</span>
                                 </div>
