--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -167,7 +167,7 @@
 
             <div id="cadretfile" hidden class="card shadow mb-4 card border-left-primary shadow h-100 py-2 mx-2 my-2">
                 <div class="d-flex flex-row justify-content-center card-header py-3">
-                    <h6 class="m-0 font-weight-bold text-primary">Twitter</h6>
+                    <h6 class="m-0 font-weight-bold text-primary">Document</h6>
                 </div>
                 <div class="d-flex flex-row justify-content-center card-body">
                     cette option nous permettre de selectioner fichier.
@@ -181,8 +181,10 @@
                                        class="custom-file-input" id="upload">
                                 <label id="filetext" class="custom-file-label" for="upload">choisir fichier</label>
                             </div>
-                            <div class="input-group-append">
-                                <button id="button_file" hidden onclick="starprogress()" class="btn btn-primary btn-icon-split"
+
+                        </div>
+                         <div class="d-flex flex-row justify-content-center my-2">
+                                <button id="button_file" hidden onclick="starprogress()" class="btn btn-outline-secondary btn-icon-split "
                                         type="submit">
                                     <span class="text">commencer</span>
                                     <span class="icon text-white-50">
@@ -190,7 +192,6 @@
                                 </span>
                                 </button>
                             </div>
-                        </div>
                     </form>
                 </div>
             </div>
