--- a/web/templates/resultatfinal.html
+++ b/web/templates/resultatfinal.html
@@ -10,6 +10,7 @@
     <meta name="author" content="">
 
     <title> Resultat</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!-- Custom fonts for this template dash board-->
     <link href="{{ url_for('static',filename='vendor/fontawesome-free/css/all.min.css') }}" rel="stylesheet"
           type="text/css">
@@ -22,8 +23,6 @@
 </head>
 
 <body id="page-top">
-
-
 <!-- Page Wrapper -->
 <div id="wrapper">
 
@@ -114,6 +113,16 @@
                             class="list-group-item d-flex justify-content-between align-items-center">
                             noms :
                             <span class="badge badge-primary badge-pill">{{session['stat_nom']|length}}</span>
+                        </li>
+                        <li data-toggle="modal" data-target="#list_aux"
+                            class="list-group-item d-flex justify-content-between align-items-center">
+                            Auxiliaire :
+                            <span class="badge badge-primary badge-pill">{{session['stat_aux']|length}}</span>
+                        </li>
+                        <li data-toggle="modal" data-target="#list_proprn"
+                            class="list-group-item d-flex justify-content-between align-items-center">
+                            Propre noms :
+                            <span class="badge badge-primary badge-pill">{{session['stat_propre_noun']|length}}</span>
                         </li>
                         <li class="list-group-item d-flex justify-content-between align-items-center">
                             autre :
@@ -485,7 +494,15 @@
                                                             <tbody>
                                                             {% for i in range(session['subjective_sentences']|length) %}
                                                             <tr>
-                                                                <td>{{session['subjective_sentences'][i]}}</td>
+                                                                <td>
+                                                                    <span>{{session['subjective_sentences'][i]}}</span>
+                                                                    <input type="hidden" value="{{session['visualizer_dep'][i]}}">
+                                                                    <div></div>
+                                                                    <button onclick="visualizer_dep(this)"> visulaize</button>
+                                                                    <input type="hidden" value="{{session['visualizer_ent'][i]}}">
+                                                                    <div></div>
+                                                                    <button onclick="visualizer_dep(this)"> visulaize</button>
+                                                                </td>
                                                                 <td>{{session['model_global'][i]}}
                                                                     <p>
                                                                         {% set
@@ -634,12 +651,15 @@
         </footer>
         <!-- End of Footer -->
     </div>
+
+    <!-- variable de html -->
     <input id="nbr_verb" type="hidden" value="{{session['stat_verb']|length}}">
     <input id="nbr_adj" type="hidden" value="{{session['stat_adj']|length}}">
     <input id="nbr_nom" type="hidden" value="{{session['stat_nom']|length}}">
     <input id="nbr_autre" type="hidden" value="{{session['stat_other']}}">
     <input id="total" type="hidden" value="{{session['stat_total']}}">
-
+    <input id="nbr_aux" type="hidden" value="{{session['stat_aux']|length}}">
+    <input id="nbr_proprn" type="hidden" value="{{session['stat_propre_noun']|length}}">
     <!-- dialog statistic -->
 
     <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
@@ -806,6 +826,78 @@
             </div>
         </div>
     </div>
+
+    <div class="modal fade" id="list_aux" tabindex="-1" role="dialog"
+         aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">liste des auxiliaires</h5>
+                </div>
+                <div class="modal-body">
+                    {% for item in session['stat_aux'] %}
+                    <span class="badge badge-secondary">{{item}}</span>
+                    {% endfor %}
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-outline-danger" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade" id="list_proprn" tabindex="-1" role="dialog"
+         aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">liste des propres noms</h5>
+                </div>
+                <div class="modal-body">
+                    {% for item in session['stat_propre_noun'] %}
+                    <span class="badge badge-secondary">{{item}}</span>
+                    {% endfor %}
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-outline-danger" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- dialog visualisation -->
+    <div class="modal fade" id="list_vis_dep" tabindex="-1" role="dialog"
+         aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">visulisation dep</h5>
+                </div>
+                <div id="div_vis_dep" class="modal-body">
+
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-outline-danger" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade" id="list_vis_ent" tabindex="-1" role="dialog"
+         aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">visulisation dep</h5>
+                </div>
+                <div id="div_vis_ent" class="modal-body">
+
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-outline-danger" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 
 <!-- End of Content Wrapper -->
@@ -833,7 +925,6 @@
 <script src="{{ url_for('static',filename='js/demo/chart-pie-demo.js') }}"></script>
 
 <script src="{{ url_for('static',filename='js/main.js') }}"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="{{ url_for('static',filename='js/myfunction.js') }}"></script>
 <script src="{{ url_for('static',filename='js/createinterface.js') }}"></script>
 
@@ -850,7 +941,6 @@
 
 
 <script>
-
     statistic();
     statistic2();
     $('#textarea').on('keyup', function () {
